# gfs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: build-release.yml  release.yml
agents/: qwery-agent.md
crates/adapters/compute-docker/src/: error.rs  lib.rs
crates/adapters/storage-apfs/src/: error.rs  lib.rs
crates/adapters/storage-file/src/: error.rs  lib.rs
crates/applications/cli/: Cargo.toml
crates/applications/cli/src/: lib.rs  main.rs  output.rs
crates/applications/cli/tests/: e2e_checkout.rs  e2e_checkout_postgres.rs  e2e_commit.rs  e2e_init.rs  e2e_schema_diff.rs  e2e_short_hash.rs
crates/applications/mcp/src/: main.rs  tools.rs
crates/applications/mcp/tests/: mcp_stdio.rs
crates/applications/website/: install
crates/applications/website/style/: main.css
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/domain/src/adapters/: gfs_repository.rs
crates/domain/src/model/: commit.rs  config.rs  errors.rs  layout.rs  mod.rs
crates/domain/src/ports/: compute.rs  database_provider.rs  repository.rs  storage.rs
crates/domain/src/repo_utils/: mod.rs  repo_layout.rs
crates/domain/src/utils/: hash.rs
crates/telemetry/src/: lib.rs
docs/rfcs/002-cli/: 002-cli-export.md  002-cli-import.md  002-cli-query.md  002-cli-schema-diff.md  002-cli-schema.md
integration_tests/tests/: e2e_checkout.rs  e2e_checkout_postgres.rs  e2e_commit.rs  mcp_stdio.rs
skills/use-gfs-cli/: SKILL.md
skills/use-gfs-mcp/: SKILL.md
(+46 files in other folders)
