[package]
name             = "gfs-config"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
serde   = { workspace = true }
toml    = { workspace = true }
anyhow  = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
